--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -1,3 +1,4 @@
 <li>
-  <%= link_to_unless current_page.last?, t('views.pagination.last').html_safe, url, :remote => remote %>
+  <%#= link_to_unless current_page.last?, t('views.pagination.last').html_safe, url, :remote => remote %>
+  <%= link_to t('views.pagination.last').html_safe, url, :remote => remote %>
 </li>
