--- a/app/assets/stylesheets/application/personalcenters.scss
+++ b/app/assets/stylesheets/application/personalcenters.scss
@@ -46,3 +46,14 @@
        border-color:#DDDDDD;
      }
 }
+
+/* my_project_rightaire */
+.right_nav {
+  margin:40px auto 20px;
+}
+.right_content {
+  .tab1{
+    background-color:#00CBD2;
+  }
+  
+}
