--- a/app/views/user/_left_nav.html.erb
+++ b/app/views/user/_left_nav.html.erb
@@ -4,8 +4,8 @@
               <%=image_tag "personal_head.png" ,class:"p_h1"%>
                 <div class="caption">
                   <h4>我是昵称我是昵称</h4>
-                  <p><span class="empirical" >经验值</span>&nbsp&nbsp&nbsp<span>学习时长</span></p>
-                  <p><span class="empirical value">1234</span>&nbsp&nbsp<span class="value">1小时50分钟</span></p>
+                  <p><span class="empirical" >经验值</span>&nbsp;&nbsp;&nbsp;<span>学习时长</span></p>
+                  <p><span class="empirical value">1234</span>&nbsp;&nbsp;<span class="value">1小时50分钟</span></p>
                   <hr class="divesi">
                   <p><h6>个性签名：不忘初心，方得始终！</h6></p>
                 </div>
