--- a/app/views/user/my_projects.html.erb
+++ b/app/views/user/my_projects.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <%=render "left_nav" %>
-      <div class="col-md-9">
+      <div class="col-md-9 right_nav_c">
       <ul class="nav nav-tabs right_nav">
           <li role="presentation" class="active"><a href="#">参与的项目</a></li>
           <li role="presentation"><a href="#">创建的项目</a></li>
@@ -12,10 +12,20 @@
           <div class="col-md-3">
             <%=image_tag "progress_chart.png" %>
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 content_text">
           <span class="glyphicon glyphicon-cog right_icon pull-right" aria-hidden="true"></span>
           <span class="glyphicon glyphicon-signal right_icon pull-right" aria-hidden="true"></span><br>
-            在线教育平台建设<br> （总任务：20 已完成：15 代办中：5 验收通过：3）
+            <h3>在线教育平台建设</h3>（总任务：20 已完成：15 代办中：5 验收通过：3）
+          </div>
+        </div>
+                  <div class="col-md-8 col-md-offset-2 tab2">
+          <div class="col-md-3">
+            <%=image_tag "progress_chart.png" %>
+          </div>
+          <div class="col-md-9 content_text">
+          <span class="glyphicon glyphicon-cog right_icon pull-right" aria-hidden="true"></span>
+          <span class="glyphicon glyphicon-signal right_icon pull-right" aria-hidden="true"></span><br>
+            <h3>在线教育平台建设</h3>（总任务：20 已完成：15 代办中：5 验收通过：3）
           </div>
         </div>
         </div>
