--- a/app/views/admin/colleges/_college.html.erb
+++ b/app/views/admin/colleges/_college.html.erb
@@ -1,4 +1,5 @@
 <tr>
+  <td><%= image_tag(college.try(:image).try(:avatar)) %></td>
   <td><%= college.name %></td>
   <td>
     <%#= link_to [:admin, specialty], class: 'btn btn-xs btn-info', title: '查看' do %>
