--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -26,6 +26,7 @@
       <th class="text-center">主讲老师/所属院校/所属分类</th>
       <th class="text-center">课程标题</th>
       <th class="text-center">访问量</th>
+      <th class="text-center">子课程</th>
       <th class="text-center" colspan="2">操作</th>
     </tr>
   </thead>
