--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -9,35 +9,25 @@
 			<span>全部课程</span>
 			<% end %>
 		</div>
-		<div class="col-sm-3">
-			<div class="col-sm-6">
-				<%= link_to "", class: "link-sm" do %>
-				<span>全部课程</span>
+		<% @categories.each_with_index do |category, index|%>
+			<div class="col-sm-3">
+				<%= link_to "", class: "link-lg" do %>
+				  <span><%= category.name %></span>
 				<% end %>
 			</div>
+		<% end %>
+		<!-- <div class="col-sm-3">
 			<div class="col-sm-6">
-				<%= link_to "", class: "link-sm" do %>
+				<%#= link_to "", class: "link-sm" do %>
 				<span>全部课程</span>
-				<% end %>
-			</div>
-		</div>
-		<div class="col-sm-3">
-			<%= link_to "", class: "link-lg" do %>
-			<span>全部课程</span>
-			<% end %>
-		</div>
-		<div class="col-sm-3">
-			<div class="col-sm-6">
-				<%= link_to "", class: "link-sm" do %>
-				<span>全部课程</span>
-				<% end %>
+				<% #end %>
 			</div>
 			<div class="col-sm-6">
-				<%= link_to "", class: "link-sm" do %>
+				<%#= link_to "", class: "link-sm" do %>
 				<span>全部课程</span>
-				<% end %>
+				<% #end %>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<div class="row">
@@ -45,26 +35,26 @@
 			<h4 class="text-center title">课程中心</h4>
 			<div class="line"></div>
 		</div>
-		<% 9.times do %>
-		<div class="col-sm-4">
-			<div class="bordered">
-			  <%= link_to course_path(1) do %>
-					<%= image_tag("course-index.gif", class: "img-responsive")%>
-					<%= image_tag("course-teacher.png", class: "img-responsive avatar")%>
-					<span class="pull-right name">沈晴天</span>
-					<div class="col-sm-12 mt-40">
-						<p>操作系统和虚拟化安全</p>
-						<p>沈晴天，博士， 副教授。北京大学牛逼学院...</p>
-					</div>
-					<div class="col-sm-12 infos">
-						<span class="glyphicon glyphicon-eye-open"></span> 1549
-						&nbsp;&nbsp;&nbsp;
-						<span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-						<b class="pull-right">免费</b>
-					</div>
-				<% end %>
+		<% @courses.each do |course| %>
+			<div class="col-sm-4">
+				<div class="bordered">
+				  <%= link_to course_path(course.id) do %>
+						<%= image_tag(course.image.avatar.url(:c_360_200), class: "img-responsive")%>
+						<%= image_tag(course.try(:teacher).try(:image).avatar.url(:t_98), class: "img-responsive avatar")%>
+						<span class="pull-right name"><%= course.try(:teacher).name %></span>
+						<div class="col-sm-12 mt-40">
+							<p><%= course.try(:teacher).description %></p>
+							<!-- <p>沈晴天，博士， 副教授。北京大学牛逼学院...</p> -->
+						</div>
+						<div class="col-sm-12 infos">
+							<span class="glyphicon glyphicon-eye-open"></span> <%= course.view_count %>
+							&nbsp;&nbsp;&nbsp;
+							<span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+							<b class="pull-right">免费</b>
+						</div>
+					<% end %>
+				</div>
 			</div>
-		</div>
 		<% end %>
 	</div>
 </div>
