--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,32 +1,17 @@
 <div class="container courses__show">
-	<%=render partial: "courses_intro"%>
+	<%=render partial: "courses_intro", locals: {course: @course}%>
 	<div class=" wrapper online-courses">
 		<h3>&nbsp;课程选择</h3>
 		<div class="container">
-		<% 3.times do %>
-			<div class="col-xs-3">
-				<%=image_tag"online.png",width:250%>
-				<div class="shadow">第一章 &nbsp;&nbsp;C语言程序设计精髓 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-				</div>
-			</div>
-			<div class="col-xs-3">
-				<%=image_tag"online.png",width:250%>
-				<div class="shadow">第一章 &nbsp;&nbsp;C语言程序设计精髓 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-				</div>
-			</div>
-			<div class="col-xs-3">
-				<%=image_tag"online.png",width:250%>
-				<div class="shadow">第一章 &nbsp;&nbsp;C语言程序设计精髓 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-				</div>
-			</div>
-			<div class="col-xs-3">
-				<%=image_tag"online.png",width:250%>
-				<div class="shadow">第一章 &nbsp;&nbsp;C语言程序设计精髓 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-				</div>
-			</div>
-		<%end%>
+		  <% @sub_courses.each do |sub_course|%>
+		    <%= link_to sub_course_path(sub_course, course_id: @course.id) do %>
+					<div class="col-xs-3">
+						<%=image_tag(sub_course.try(:image).avatar.url(:c_250_190))%>
+						<div class="shadow">第一章 &nbsp;&nbsp;C语言程序设计精髓 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
+						</div>
+					</div>
+				<% end %>
+		  <%end%>
 		</div>
-
 	</div>
 </div>
-
