--- a/app/views/admin/colleges/_form.html.erb
+++ b/app/views/admin/colleges/_form.html.erb
@@ -1,4 +1,18 @@
 <%= simple_form_for([:admin, @college], html: {class: "form-horizontal"}) do |f| %>
+  <% if @college.image.present? %>
+    <div class="form-group">
+      <%= label_tag :image, '已上传LOGO', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-4 container">
+        <%= image_tag(@college.try(:image).try(:avatar), size: "340x200") %>
+      </div>
+    </div>
+  <% end %>
+  <div class="form-group">
+    <%= f.label :image, '院校LOGO', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4 container">
+      <%= f.file_field :image %>
+    </div>
+  </div>
   <div class="form-group">
     <%= f.label :name, '院校名称', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
@@ -14,3 +28,9 @@
     </div>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  $(function(){
+    $("#college_image").fileinput();
+  });
+</script>
