--- a/app/views/admin/colleges/index.html.erb
+++ b/app/views/admin/colleges/index.html.erb
@@ -22,6 +22,7 @@
 <table class="table table-hover table-bordered text-center table-condensed">
   <thead>
     <tr>
+      <th class="text-center">院校logo</th>
       <th class="text-center">名称</th>
       <th class="text-center" colspan="2">操作</th>
     </tr>
