--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -18,6 +18,15 @@
       <% end %>
     </div>
   </div>
+  <div class="form-group">
+    <%= label_tag :teacher, "主讲教师", class: 'col-sm-2 control-label' %>
+    <div class="col-sm-8">
+      <% @teachers.each do |p| %>
+        <%= f.radio_button :teacher_id, p.id %>
+        <%= f.label :teacher_id, p.name %>
+      <% end %>
+    </div>
+  </div>
   <% if @course.image.present? %>
     <div class="form-group">
       <%= label_tag :image, '已上传展示图', class: 'col-sm-2 control-label' %>
@@ -30,6 +39,13 @@
     <%= f.label :image, '课程展示图', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4 container">
       <%= f.file_field :image %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :attachment, '课程附件', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4 container">
+      <%= f.file_field :attachment %>
     </div>
   </div>
 
@@ -57,6 +73,6 @@
 
 <script type="text/javascript">
   $(function(){
-    $("#course_image").fileinput();
+    $("#course_image, #course_attachment").fileinput();
   });
 </script>
