--- a/app/views/admin/courses/edit.html.erb
+++ b/app/views/admin/courses/edit.html.erb
@@ -3,10 +3,10 @@
     <a href="<%= admin_root_path%>">后台</a>
   </li>
   <li>
-    <a href="<%= admin_courses_path%>">院校列表</a>
+    <a href="<%= admin_courses_path%>">课程列表</a>
   </li>
   <li>
-    <a href="<%= admin_course_path(@course)%>"><%= @course.name %></a>
+    <a href="<%= admin_course_path(@course)%>"><%= @course.title %></a>
   </li>
   <li class="active">修改</li>
   <hr></hr>
