--- a/app/assets/stylesheets/application/personalcenters.scss
+++ b/app/assets/stylesheets/application/personalcenters.scss
@@ -53,7 +53,8 @@
   background-color:#fff;
   border-radius:5px;
   border:solid 1px #DDDDDD;
-  height:785px;
+  padding-bottom:20px;
+  min-height:785px;
   margin:40px auto;
   
   /* right_nav style */
@@ -81,4 +82,30 @@
     background-color:#f56935;
   }
 }
+  .bordered {
+    border: solid 1px #e3e3e3;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    position: relative;
+    overflow: hidden;
+    img.avatar {
+      top: 100px;
+      left: 20px;
+      position: absolute;
+    }
+    .mt-40 {
+      margin-top: 40px;
+    }
+    .infos {
+      color: #9b9b9b;
+      b, span {
+        color: #19b29f;
+      }
+    }
+    .name {
+      color: #9b9b9b;
+      padding-right: 20px;
+      padding-top: 10px;
+    }
+  }
 }
