--- a/app/views/user/my_courses.html.erb
+++ b/app/views/user/my_courses.html.erb
@@ -4,9 +4,9 @@
       <%=render "left_nav" %>
       <div class="col-md-9 right_nav_c">
       <ul class="nav nav-tabs right_nav">
-          <li role="presentation" class="active"><a href="#">参与的项目</a></li>
-          <li role="presentation"><a href="#">创建的项目</a></li>
-          <li role="presentation"><a href="#">创建的项目</a></li>
+          <li role="presentation" class="active"><a href="#">已收藏</a></li>
+          <li role="presentation"><a href="#">已学习</a></li>
+          <li role="presentation"><a href="#">已完成</a></li>
         </ul>
         <div class="row">
           <% 6.times do %>
