--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,18 +4,20 @@
 			<h4 class="text-center title">专业分类</h4>
 			<div class="line"></div>
 		</div>
-		<div class="col-sm-3">
-			<%= link_to "", class: "link-lg active" do %>
-			<span>全部课程</span>
-			<% end %>
-		</div>
-		<% @categories.each_with_index do |category, index|%>
+		<div class="search-course">
 			<div class="col-sm-3">
-				<%= link_to "", class: "link-lg" do %>
-				  <span><%= category.name %></span>
+				<%= link_to courses_path, class: "link-lg active", param: "" do %>
+				<span>全部课程</span>
 				<% end %>
 			</div>
-		<% end %>
+			<% @categories.each_with_index do |category, index|%>
+				<div class="col-sm-3">
+					<%= link_to courses_path(category_id: category.id), class: "link-lg" do %>
+					  <span><%= category.name %></span>
+					<% end %>
+				</div>
+			<% end %>
+		</div>
 		<!-- <div class="col-sm-3">
 			<div class="col-sm-6">
 				<%#= link_to "", class: "link-sm" do %>
@@ -35,26 +37,8 @@
 			<h4 class="text-center title">课程中心</h4>
 			<div class="line"></div>
 		</div>
-		<% @courses.each do |course| %>
-			<div class="col-sm-4">
-				<div class="bordered">
-				  <%= link_to course_path(course.id) do %>
-						<%= image_tag(course.image.avatar.url(:c_360_200), class: "img-responsive")%>
-						<%= image_tag(course.try(:teacher).try(:image).avatar.url(:t_98), class: "img-responsive avatar")%>
-						<span class="pull-right name"><%= course.try(:teacher).name %></span>
-						<div class="col-sm-12 mt-40">
-							<p><%= course.try(:teacher).description %></p>
-							<!-- <p>沈晴天，博士， 副教授。北京大学牛逼学院...</p> -->
-						</div>
-						<div class="col-sm-12 infos">
-							<span class="glyphicon glyphicon-eye-open"></span> <%= course.view_count %>
-							&nbsp;&nbsp;&nbsp;
-							<span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-							<b class="pull-right">免费</b>
-						</div>
-					<% end %>
-				</div>
-			</div>
-		<% end %>
+		<div id="courseList">
+		  <%= render @courses %>
+		</div>
 	</div>
 </div>
