--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,4 +1,3 @@
 <li>
-  <%#= link_to_unless current_page.last?, t('views.pagination.next'), url, :rel => 'next', :remote => remote, :class => "next_page" %>
-  <%= link_to t('views.pagination.next'), url, :rel => 'next', :remote => remote, :class => "next_page" %>
+  <%= link_to_unless current_page.last?, t('views.pagination.next'), url, :rel => 'next', :remote => remote, :class => "next_page" %>
 </li>
