--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,4 +1,3 @@
 <li>
-  <%#= link_to_unless current_page.first?, t('views.pagination.previous'), url, :rel => 'prev', :remote => remote , :class => "prev_page" %>
-  <%= link_to t('views.pagination.previous'), url, :rel => 'prev', :remote => remote , :class => "prev_page" %>
+  <%= link_to_unless current_page.first?, t('views.pagination.previous'), url, :rel => 'prev', :remote => remote , :class => "prev_page" %>
 </li>
