--- a/app/views/user/my_projects.html.erb
+++ b/app/views/user/my_projects.html.erb
@@ -1,7 +1,9 @@
 <div class="waperbg">
   <div class="container">
     <div class="row">
-      <%=render "left_nav" %>
+    <div class="col-md-3">
+       <%=render "left_nav" %>
+    </div>
       <div class="col-md-9 right_nav_c">
       <ul class="nav nav-tabs right_nav">
           <li role="presentation" class="active"><a href="#">参与的项目</a></li>
