--- a/app/views/user/my_informations.html.erb
+++ b/app/views/user/my_informations.html.erb
@@ -1,6 +1,9 @@
+<div class="waperbg">
 <div class="container">
 	<div class="row">
+	<div class="col-md-3">
 		<%=render partial: "left_nav"%>
+		</div>
 		<div class="col-md-9 users__my_informations">
 			<div class="row">
 				<div  class="my-nav">
@@ -142,4 +145,5 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
