--- a/app/assets/stylesheets/application/user.scss
+++ b/app/assets/stylesheets/application/user.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .users__my_informations{
 	.my-nav{
+                background-color:#fff;
 		margin-top: 40px;
 		margin-bottom: 20px;
 		padding: 10px;
@@ -46,6 +47,7 @@
 	}
 }
 
+
 .my__messages{
 	.main{
 		padding-top: 20px;
@@ -83,6 +85,12 @@
  /*  .waperbg {
    background: image-url('center_bg.png') left top no-repeat;
  } */
+
+/* user left_nav */
+.waperbg {
+  background: image-url('center_bg.png') left top no-repeat;
+}
+
   .thumbnail {
     margin-top:40px;
     padding-top:10px;
@@ -107,8 +115,11 @@
   border:solid 1px #DDDDDD;
   border-radius:5px;
   text-align:center;
-    padding:30px 10px;
-  li {
+  padding:30px 10px;
+  .active {
+    background: image-url("p_link_bg.png") center no-repeat;
+  }
+  li  {
     list-style-type:none;
     font-size:15px;
     font-weight:600;
@@ -141,11 +152,11 @@
   
   /* right_nav style */
   .right_nav {
-    padding:10px 10px 0;
-    margin-bottom:20px;
+  padding:10px 10px 0;
+  margin-bottom:20px;
   border-color:#00CBD2;
   .active > a {
-      border-color:#00CBD2;
+    border-color:#00CBD2;
     border-width:4px 2px 0 2px;
     }
 }
