resolve the error of evaluations.scss

--- a/app/assets/stylesheets/application/evaluations.scss
+++ b/app/assets/stylesheets/application/evaluations.scss
@@ -4,7 +4,6 @@
 		border-style: none;
 		padding-top: 10px;
 	}
-
 	.caption{
 		h3{
 			color: #00C0B6;
@@ -13,10 +12,9 @@
 			text-indent: 2em;
 		}
 	}	
-
-
-.evaluations__show{
-	.content{
-		border:1px solid #ccc;
+	.evaluations__show{
+		.content{
+			border:1px solid #ccc;
+		}
 	}
 }
