--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -63,3 +63,75 @@
 		}
 	}
 }
+.courses__show{
+.sub_head{
+		margin: 10px 0;
+	}
+.wrapper{
+	border:1px solid #ccc;
+	//padding: 20px;
+	background-color:#ECECEC;
+	margin-bottom: 20px;	
+	.media-body{
+		padding-left: 10px;
+		h2{
+			margin-bottom: 20px;
+		}
+		.name{
+			font-size: 18px;
+		}
+		span{color: #9D9B9C;}
+		.click{
+			padding: 0 20px 0 40px;
+			a{
+				color: #FFC500;
+				text-decoration: none;
+				font-size: 16px;
+			}
+		}
+		p{
+			font-weight: bold;
+			font-family: "微软雅黑";
+			line-height: 2;
+			padding-top: 20px;
+			a{
+				color: #FF0000;
+			}
+		}
+		.btn{
+			margin-left: 80px;
+			border-radius:0;
+			background-color: #2DC8B8;
+			color: #fff;
+			border:1px solid #ccc;
+
+		}
+	}
+	.col-xs-3{
+		padding:10px 0;
+		position: relative;
+		.shadow{
+			color: #fff;
+			padding: 5px 10px 5px 20px;
+			background: rgba(0,0,0,0.6);
+			position: absolute;
+			bottom: 11px;
+			span{
+				color:#FD0013;
+				font-size: 20px;
+				padding-left: 20px;
+			}
+		}
+	}
+	}
+	.online{
+		padding: 20px;
+	}
+	.online-courses{
+		padding-bottom: 20px;
+		h3{
+			padding-left: 7px;
+		}
+	}
+}
+
