--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -22,7 +22,9 @@
 					   	<li><a href="<%= list_courses_path %>">大学课程</a></li>
 					  </ul>
 				</a></li>
-				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">实训项目</a></li>
+				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>">
+					<a href="#">实训项目</a>
+				</li>
 				<li  class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">实习招聘
 					<ul class="dropdown-menu sub_menu" >
 					  	<li><a href="#">工作推荐</a></li>
